@@ -55,7 +55,6 @@ CharacterScene::CharacterScene( Game* _game, CharacterSceneData* _input )
 
 	backButton.Init( &gamui2D, blue );
 	backButton.SetSize( GAME_BUTTON_SIZE_F, GAME_BUTTON_SIZE_F );
-	//backButton.SetText( "Back" );
 	backButton.SetDeco(	Game::CalcDecoAtom( DECO_OKAY_CHECK, true ),
 						Game::CalcDecoAtom( DECO_OKAY_CHECK, false ) );	
 
@@ -135,6 +134,9 @@ void CharacterScene::Resize()
 
 	gamui::UIItem* controlArr[NUM_CONTROL+1] = { &helpButton, &control[0], &control[1], &control[2] };
 	gamui::Gamui::Layout( controlArr, NUM_CONTROL+1, NUM_CONTROL+1, 1, storageWidget->X(), (float)(port.UIHeight()-GAME_BUTTON_SIZE), storageWidget->Width(), GAME_BUTTON_SIZE_F );
+
+	statWidget.SetPos( storageWidget->X(), 0 );
+	compWidget.SetPos( storageWidget->X(), 0 );
 }
 
 void CharacterScene::Draw3D()
@@ -245,12 +247,24 @@ void CharacterScene::StatWidget::SetVisible( bool visible )
 }
 
 
+void CharacterScene::StatWidget::SetPos( float x, float y )
+{
+	float dy = 20.0f;
+	float dx = 100.0f;
+	for( int i=0; i<STATS_ROWS; ++i ) {
+		textTable[i*2+0].SetPos( x, y + (float)(i+1) * dy );
+		textTable[i*2+1].SetPos( x+dx, y + (float)(i+1) * dy );
+	}
+}
+
+
 
 void CharacterScene::CompWidget::Init( const ItemDefArr* arr, const Storage* storage, const Unit* unit, gamui::Gamui* g, const gamui::ButtonLook& look, float x, float y, float width )
 {
 	this->itemDefArr = arr;
 	this->unit = unit;
 	this->storage = storage;
+	this->width = width;
 
 	float NAME_WIDTH = 70.0f;
 	float DY = 16.0f;
@@ -347,6 +361,25 @@ void CharacterScene::CompWidget::SetVisible( bool visible )
 	}
 	if ( visible )
 		SetCompText();
+}
+
+
+void CharacterScene::CompWidget::SetPos( float x, float y )
+{
+	float NAME_WIDTH = 70.0f;
+	float DY = 16.0f;
+	float delta = (width - NAME_WIDTH) / (COMP_COL-1);
+
+	for( int j=0; j<COMP_ROW; ++j ) {
+		for( int i=0; i<COMP_COL; ++i ) {
+			float rx = x;
+
+			if ( i>0 )
+				rx = x + NAME_WIDTH + delta*(i-1);
+
+			compTable[j*COMP_COL+i].SetPos( rx, y + (float)(j+1)*DY );
+		}
+	}
 }
 
 
